# ragwatch

./: .pre-commit-config.yaml  .secrets.baseline  .shellcheckrc  CLAUDE.md  Containerfile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md  infrastructure.md  research.md
.github/workflows/: ci.yml  container.yml  scorecard.yml  security.yml
docs/: api.md  architecture.md  configuration.md
grafana/provisioning/dashboards/: dashboards.yml  rag-metrics.json
grafana/provisioning/datasources/: prometheus.yml
quadlets/: ragwatch-grafana.container  ragwatch.container
ragwatch/: __init__.py  __main__.py
tests/: test_live.py  test_ragwatch.py
