[project]
name = "ragwatch"
version = "0.1.0"
description = "Observability service for the rag-suite stack — Prometheus + Grafana metrics"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-or-later"}
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
